# jetson_detectnet

./: README.md  detectnet_ros.py
detectnet_ros_msgs/: CMakeLists.txt  package.xml
detectnet_ros_msgs/msg/: BBox.msg  BBoxes.msg
