<?xml version="1.0"?>
<package>
  <name>detectnet_ros_msgs</name>
  <version>1.0.0</version>
  <description>ROS object detection result message for Jetson's detectNet</description>
  <maintainer email="kimkana57@gmail.com">Kana Kim</maintainer>
  <license>INHA</license>
  <url type="website">https://github.com/kka-na/jetson_detectNet</url>
  <author email="kimkana57@gmail.com">Kana Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
